--- a/projects/microblog/app/templates/index.html
+++ b/projects/microblog/app/templates/index.html
@@ -1,17 +1,9 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    {% if title %}
-    <title>{{title}} - microblog</title>
-    {% else %}
-    <title>microblog</title>
-    {% endif %}
-</head>
-<body>
-    <h1>Hello, {{user.nickname}}!</h1>
-    {% for post in posts %}
+{% extends "base.html" %}
+{% block content %}
+<h1>Hi, {{user.nickname}}</h1>
+{% for post in posts %}
+<div>
     <p>{{post.author.nickname}} says: <b>{{post.body}}</b></p>
-    {% endfor %}
-</body>
-</html>
+</div>
+{% endfor %}
+{% endblock %}
