--- a/projects/HelloDjango/polls/templates/polls/index.html
+++ b/projects/HelloDjango/polls/templates/polls/index.html
@@ -1,8 +1,10 @@
+{% load staticfiles %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <title>投票</title>
+    <link rel="stylesheet" href="{% static 'polls/style.css' %}">
 </head>
 <body>
     {% if latest_question_list %}
